--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} ha publicado",
   "{{userName}} unpublished": "{{userName}} ha despublicado",
   "{{userName}} moved": "{{userName}} ha movido",
-  "Export started": "Exportación iniciada",
   "Your file will be available in {{ location }} soon": "Tu archivo estará disponible en {{ location }} pronto",
   "View": "Ver",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Exportación iniciada",
   "A ZIP file containing the images, and documents in the Markdown format.": "Un archivo ZIP que contiene las imágenes y los documentos en formato Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Un archivo ZIP que contiene las imágenes y los documentos como archivos HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Datos estructurados que se pueden usar para migrar a otra instancia {{ appName }} compatible.",
@@ -896,6 +897,7 @@
   "Triggers": "Activadores",
   "Mention users and more": "Menciona usuarios y más",
   "Insert block": "Insertar bloque",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Iniciar sesión",
   "Continue with Email": "Continuar con el correo electrónico",
   "Continue with {{ authProviderName }}": "Continuar con {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Conectar",
   "Allow members to sign-in using their email address": "Permitir que los miembros inicien sesión usando su dirección de correo electrónico",
   "The server must have SMTP configured to enable this setting": "El servidor debe tener SMTP configurado para habilitar esta opción",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "por {{ name }}",
+  "Expired": "Expirado",
   "Last used": "Utilizado por última vez",
   "No expiry": "No expira",
   "Restricted scope": "Ámbito restringido",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Procesando",
-  "Expired": "Expirado",
   "Completed": "Completado",
   "Failed": "Ha fallado",
   "All collections": "Todas las colecciones",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Requiere que los miembros sean invitados al área de trabajo antes de que puedan crear una cuenta usando SSO.",
   "Default role": "Rol predeterminado",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "El rol de usuario predeterminado para cuentas nuevas. Cambiar esta configuración no afecta a las cuentas de usuario existentes.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Cuando está activado, los documentos pueden ser compartidos públicamente en Internet por cualquier miembro del espacio de trabajo",
   "Viewer document exports": "Lectores pueden exportar documentos",
   "When enabled, viewers can see download options for documents": "Cuando está habilitado, los lectores pueden ver las opciones de descarga de documentos",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Un ID que identifica de forma única el sitio web en tu instancia de Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Ups, necesitas aceptar los permisos en Notion para conectar {{ appName }} con tu espacio de trabajo. ¿Quieres intentarlo de nuevo?",
   "Import pages from Notion": "Importar páginas de Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Añadir a Slack",
   "document published": "documento publicado",
   "document updated": "documento actualizado",
