--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} publicerede",
   "{{userName}} unpublished": "{{userName}} afpublicerede",
   "{{userName}} moved": "{{userName}} flyttede",
-  "Export started": "Eksport påbegyndt",
   "Your file will be available in {{ location }} soon": "Din fil vil være tilgængelig i {{ location }} snart",
   "View": "Visning",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Eksport påbegyndt",
   "A ZIP file containing the images, and documents in the Markdown format.": "En ZIP-fil, der indeholder billeder, og dokumenter i Markdown format.",
   "A ZIP file containing the images, and documents as HTML files.": "En ZIP-fil, der indeholder billeder, og dokumenter som HTML-filer.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Struktureret data, der kan bruges til at overføre data til en anden kompatibel {{ appName }} instans.",
@@ -896,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
   "Insert block": "Insert block",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Sign In",
   "Continue with Email": "Continue with Email",
   "Continue with {{ authProviderName }}": "Continue with {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Connect",
   "Allow members to sign-in using their email address": "Tillad medlemmer at logge ind med deres e-mailadresse",
   "The server must have SMTP configured to enable this setting": "Serveren skal have SMTP konfigureret for at aktivere denne indstilling",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
+  "Expired": "Expired",
   "Last used": "Last used",
   "No expiry": "No expiry",
   "Restricted scope": "Restricted scope",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Processing",
-  "Expired": "Expired",
   "Completed": "Completed",
   "Failed": "Failed",
   "All collections": "All collections",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Kræver at medlemmer inviteres til arbejdsområdet, før de kan oprette en konto ved hjælp af SSO.",
   "Default role": "Standardrolle",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Standardrollen for nye konti. Ændring af denne indstilling påvirker ikke eksisterende brugerkonti.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Når aktiveret, kan dokumenter deles offentligt på internettet af ethvert medlem af arbejdsrummet",
   "Viewer document exports": "Læser dokument eksport",
   "When enabled, viewers can see download options for documents": "Når aktiveret, kan læsere se download-muligheder for dokumenter",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Et ID, der entydigt identificerer hjemmesiden i din Matomo instans.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Hovsa, du skal acceptere tilladelserne i Notion for at forbinde {{ appName }} til dit arbejdsområde. Prøv igen?",
   "Import pages from Notion": "Importér sider fra Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Tilføj til Slack",
   "document published": "dokument publiceret",
   "document updated": "dokument opdateret",
