--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} veröffentlichte",
   "{{userName}} unpublished": "{{userName}} nicht veröffentlicht",
   "{{userName}} moved": "{{userName}} verschob",
-  "Export started": "Export gestartet",
   "Your file will be available in {{ location }} soon": "Ihre Datei wird in Kürze unter {{ location }} verfügbar sein",
   "View": "Anzeigen",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Export gestartet",
   "A ZIP file containing the images, and documents in the Markdown format.": "Eine ZIP-Datei, die die Bilder und Dokumente im Markdown Format enthält.",
   "A ZIP file containing the images, and documents as HTML files.": "Eine ZIP-Datei, die die Bilder und Dokumente im HTML Format enthält.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturierte Daten, die verwendet werden können, um Daten an eine andere kompatible {{ appName }} Instanz zu übertragen.",
@@ -896,6 +897,7 @@
   "Triggers": "Auslöser",
   "Mention users and more": "Erwähne Benutzer und mehr",
   "Insert block": "Block einfügen",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Anmelden",
   "Continue with Email": "Weiter mit E-Mail",
   "Continue with {{ authProviderName }}": "Weiter mit {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Verbinden",
   "Allow members to sign-in using their email address": "Mitgliedern erlauben, sich mit ihrer E-Mail-Adresse anzumelden",
   "The server must have SMTP configured to enable this setting": "Der Server muss SMTP konfiguriert haben, um diese Einstellung zu aktivieren",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "von {{ name }}",
+  "Expired": "Abgelaufen",
   "Last used": "Zuletzt verwendet",
   "No expiry": "Kein Verfall",
   "Restricted scope": "Eingeschränkter Bereich",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Wird ausgeführt",
-  "Expired": "Abgelaufen",
   "Completed": "Erledigt",
   "Failed": "Fehlgeschlagen",
   "All collections": "Alle Sammlungen",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Erfordert die Einladung von Mitgliedern in den Arbeitsbereich, bevor sie ein Konto mit SSO erstellen können.",
   "Default role": "Standard-Rolle",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Die Standardrolle für neue Benutzer. Das Ändern dieser Einstellung wirkt sich nicht auf bestehende Benutzerkonten aus.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Wenn diese Option aktiviert ist, können Dokumente von jedem Arbeitsbereichs-Mitglied öffentlich im Internet geteilt werden",
   "Viewer document exports": "Betrachter können Dokumente exportieren",
   "When enabled, viewers can see download options for documents": "Wenn diese Option aktiviert ist, können Betrachter Download-Optionen für Dokumente sehen",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Eine ID, welche die Website in Ihrer Matomo-Instanz eindeutig identifiziert.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Huch, du musst die Berechtigungen in Notion akzeptieren, um {{ appName }} mit deinem Arbeitsbereich zu verbinden. Möchtest du es noch einmal versuchen?",
   "Import pages from Notion": "Importieren Sie Seiten von Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Zu Slack hinzufügen",
   "document published": "Dokument veröffentlicht",
   "document updated": "Dokument aktualisiert",
