--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} publikálta",
   "{{userName}} unpublished": "{{userName}} visszavonta",
   "{{userName}} moved": "{{userName}} áthelyezte",
-  "Export started": "Az exportálás elindult",
   "Your file will be available in {{ location }} soon": "A fájl hamarosan elérhető lesz a {{ location }} útvonalon",
   "View": "Megtekintés",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Az exportálás elindult",
   "A ZIP file containing the images, and documents in the Markdown format.": "Egy ZIP állomány, melyben a képek és Markdown formátumú dokumenumok találhatóak.",
   "A ZIP file containing the images, and documents as HTML files.": "Egy ZIP állomány, melyben a képek és HTML formátumú dokumenumok találhatóak.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturált adat, mely adatátvitelre használható egy másik, kompatibilis {{ appName }} példányba.",
@@ -896,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
   "Insert block": "Blokk beszúrása",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Bejelentkezés",
   "Continue with Email": "Continue with Email",
   "Continue with {{ authProviderName }}": "Continue with {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Connect",
   "Allow members to sign-in using their email address": "Allow members to sign-in using their email address",
   "The server must have SMTP configured to enable this setting": "The server must have SMTP configured to enable this setting",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
+  "Expired": "Lejárt",
   "Last used": "Last used",
   "No expiry": "No expiry",
   "Restricted scope": "Restricted scope",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Processing",
-  "Expired": "Lejárt",
   "Completed": "Completed",
   "Failed": "Failed",
   "All collections": "All collections",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Require members to be invited to the workspace before they can create an account using SSO.",
   "Default role": "Alapértelmezett szerep",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "The default user role for new accounts. Changing this setting does not affect existing user accounts.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "When enabled, documents can be shared publicly on the internet by any member of the workspace",
   "Viewer document exports": "Viewer document exports",
   "When enabled, viewers can see download options for documents": "When enabled, viewers can see download options for documents",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Hozzáadás Slackhez",
   "document published": "dokumentum közzétéve",
   "document updated": "dokumentum frissítve",
