--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} pubblicato",
   "{{userName}} unpublished": "{{userName}} ha annullato la pubblicazione",
   "{{userName}} moved": "{{userName}} ha spostato",
-  "Export started": "Esportazione avviata",
   "Your file will be available in {{ location }} soon": "Il tuo file sarà disponibile presto in {{ location }}",
   "View": "Visualizza",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Esportazione avviata",
   "A ZIP file containing the images, and documents in the Markdown format.": "Un file ZIP contenente le immagini e i documenti nel formato Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "Un file ZIP contenente le immagini e documenti come file HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Dati strutturati che possono essere utilizzati per trasferire i dati a un'altra istanza {{ appName }} compatibile.",
@@ -896,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Menziona utenti e altro ancora",
   "Insert block": "Inserisci blocco",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Accedi",
   "Continue with Email": "Continua con email",
   "Continue with {{ authProviderName }}": "Continua con {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Connetti",
   "Allow members to sign-in using their email address": "Consenti ai membri di accedere utilizzando il loro indirizzo email",
   "The server must have SMTP configured to enable this setting": "Il server deve disporre di SMTP configurato per abilitare questa impostazione",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrizioni",
   "by {{ name }}": "di {{ name }}",
+  "Expired": "Scaduto",
   "Last used": "Ultimo utilizzo",
   "No expiry": "Nessuna scadenza",
   "Restricted scope": "Campo limitato",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Impossibile esportare i membri",
   "Download CSV": "Scarica CSV",
   "Processing": "In corso",
-  "Expired": "Scaduto",
   "Completed": "Completato",
   "Failed": "Fallito",
   "All collections": "Tutte le raccolte",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Richiedi ai membri di essere invitati all'area di lavoro prima che possano creare un account utilizzando SSO.",
   "Default role": "Ruolo predefinito",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Il ruolo utente predefinito per i nuovi account. La modifica di questa impostazione non influisce sugli account utente esistenti.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Se abilitato, i documenti possono essere condivisi pubblicamente su Internet da qualsiasi membro dell'area di lavoro",
   "Viewer document exports": "Esportazioni di documenti per visualizzatori",
   "When enabled, viewers can see download options for documents": "Se abilitato, i visualizzatori possono vedere le opzioni di download per i documenti",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Un ID che identifica in modo univoco il sito web nella tua istanza Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Ops, devi accettare le autorizzazioni in Notion per connettere {{ appName }} al tuo spazio di lavoro. Riprovare?",
   "Import pages from Notion": "Importa pagine da Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Aggiungi a Slack",
   "document published": "documento pubblicato",
   "document updated": "documento aggiornato",
