--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} が公開しました",
   "{{userName}} unpublished": "{{userName}} が非公開にしました",
   "{{userName}} moved": "{{userName}} が移動しました",
-  "Export started": "エクスポートを開始しました",
   "Your file will be available in {{ location }} soon": "あなたのファイルは間もなく {{ location }} で利用できます",
   "View": "表示",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "エクスポートを開始しました",
   "A ZIP file containing the images, and documents in the Markdown format.": "画像、および Markdown 形式のドキュメントを含む ZIP ファイル",
   "A ZIP file containing the images, and documents as HTML files.": "画像、および HTML 形式のドキュメントを含む ZIP ファイル",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "他の {{ appName }} インスタンスにデータをインポートするために使用できるデータ。",
@@ -896,6 +897,7 @@
   "Triggers": "トリガー",
   "Mention users and more": "ユーザーなどをメンションする",
   "Insert block": "ブロックの挿入",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "ログイン",
   "Continue with Email": "Eメール でログイン",
   "Continue with {{ authProviderName }}": "{{ authProviderName }} でログイン",
@@ -1027,8 +1029,11 @@
   "Connect": "接続",
   "Allow members to sign-in using their email address": "メンバーが自分のメール アドレスを使用してログインできるようにする",
   "The server must have SMTP configured to enable this setting": "この設定を有効にするには、サーバーに SMTP が設定されている必要があります。",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "{{ name }}",
+  "Expired": "期限切れ",
   "Last used": "最終使用日",
   "No expiry": "無期限",
   "Restricted scope": "制限付きスコープ",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "処理中",
-  "Expired": "期限切れ",
   "Completed": "完了",
   "Failed": "失敗",
   "All collections": "全てのコレクション",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "メンバーは SSO を使用してアカウントを作成する前に、ワークスペースに招待される必要があります。",
   "Default role": "デフォルトのロール",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "新規アカウントのデフォルトのユーザーロールです。この設定を変更しても、既存のユーザーアカウントには影響しません。",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "この設定を有効にすると、チームメンバーなら誰でもインターネット上でドキュメントを公開することができます。",
   "Viewer document exports": "閲覧者によるドキュメントのエクスポート",
   "When enabled, viewers can see download options for documents": "有効にすると、閲覧者はドキュメントのダウンロードオプションを表示できます",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Matomo インスタンスでウェブサイトを一意に識別する ID",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "{{ appName }} をワークスペースに接続するには、Notionで権限を許可する必要があります。もう一度試しますか？",
   "Import pages from Notion": "Notion からページをインポートする",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Slack に追加",
   "document published": "ドキュメントを公開",
   "document updated": "ドキュメントが更新されました",
