fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} опубліковано",
   "{{userName}} unpublished": "{{userName}} знятий з публікації",
   "{{userName}} moved": "{{userName}} переміщено",
-  "Export started": "Експорт розпочато",
   "Your file will be available in {{ location }} soon": "Скоро ваш файл буде доступний в {{ location }}",
   "View": "Перегляд",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Експорт розпочато",
   "A ZIP file containing the images, and documents in the Markdown format.": "ZIP-файл із зображеннями та документами у форматі Markdown.",
   "A ZIP file containing the images, and documents as HTML files.": "ZIP-файл із зображеннями та документами у форматі HTML.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Структуровані дані, які можна використовувати для передачі даних до іншого сумісного екземпляра {{ appName }}.",
@@ -896,6 +897,7 @@
   "Triggers": "Тригери",
   "Mention users and more": "Згадати користувачів і більше",
   "Insert block": "Вставити блок",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Увійти",
   "Continue with Email": "Продовжити з електронною поштою",
   "Continue with {{ authProviderName }}": "Продовжити з {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Під’єднатися",
   "Allow members to sign-in using their email address": "Дозволити учасникам входити, використовуючи свою адресу електронної пошти",
   "The server must have SMTP configured to enable this setting": "Щоб активувати цей параметр, на сервері має бути налаштований SMTP",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
+  "Expired": "Термін дії минув",
   "Last used": "Last used",
   "No expiry": "No expiry",
   "Restricted scope": "Restricted scope",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Не вдалося експортувати учасників",
   "Download CSV": "Завантажити CSV-файл",
   "Processing": "Виконується",
-  "Expired": "Термін дії минув",
   "Completed": "Завершено",
   "Failed": "Помилка",
   "All collections": "Усі колекції",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Вимагайте запрошення учасників до робочого простору, перш ніж вони зможуть створити обліковий запис за допомогою системи єдиного входу (SSO).",
   "Default role": "Роль за замовчуванням",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Роль користувача за замовчуванням для нових облікових записів. Зміна цього налаштування не впливає на існуючі облікові записи.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Коли цей параметр увімкнено, будь-який учасник робочого простору може публічно ділитися документами в інтернеті",
   "Viewer document exports": "Чи може переглядач експортувати документи?",
   "When enabled, viewers can see download options for documents": "Якщо ввімкнено, глядачі можуть бачити параметри завантаження документів",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "An ID that uniquely identifies the website in your Matomo instance.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Import pages from Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Додати в Slack",
   "document published": "документ опубліковано",
   "document updated": "документ оновлено",
