--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "已被 {{userName}} 发布",
   "{{userName}} unpublished": "{{userName}} 未发布",
   "{{userName}} moved": "已被 {{userName}} 移动",
-  "Export started": "导出已开始",
   "Your file will be available in {{ location }} soon": "您的文件将很快在 {{ location }} 中可用",
   "View": "浏览",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "导出已开始",
   "A ZIP file containing the images, and documents in the Markdown format.": "包含图片和 Markdown 格式文档的 ZIP 文件。",
   "A ZIP file containing the images, and documents as HTML files.": "包含图片和 HTML 格式文档的 ZIP 文件。",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "结构化数据可以用于传输数据到另一个兼容的 {{ appName }} 实例。",
@@ -896,6 +897,7 @@
   "Triggers": "触发器",
   "Mention users and more": "提及用户等",
   "Insert block": "插入块",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "登录",
   "Continue with Email": "使用电子邮箱继续",
   "Continue with {{ authProviderName }}": "使用 {{ authProviderName }} 继续",
@@ -1027,8 +1029,11 @@
   "Connect": "连接",
   "Allow members to sign-in using their email address": "允许成员使用他们的电子邮件登录",
   "The server must have SMTP configured to enable this setting": "服务器必须配置 SMTP 以启用此设置",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "由 {{ name }}创建",
+  "Expired": "已过期",
   "Last used": "最后使用的",
   "No expiry": "没有到期",
   "Restricted scope": "受限作用域",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "处理中",
-  "Expired": "已过期",
   "Completed": "已完成",
   "Failed": "失败",
   "All collections": "所有文档集",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "成员需要先被邀请进入工作区，才能通过SSO创建账户。",
   "Default role": "默认权限",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "新帐户的默认用户角色。更改此设置不会影响现有用户帐户。",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "启用后，工作区的任何成员都可以在互联网上公开共享文档",
   "Viewer document exports": "浏览者文档导出",
   "When enabled, viewers can see download options for documents": "启用时，浏览者可以看到文档的下载选项",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "此为唯一标识符，用以在您部署的 Matomo 实例中区分不同网站。",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "糟糕，您需要在 Notion 中完成授权才能将 {{ appName }} 连接到您的工作区。再试一次？",
   "Import pages from Notion": "从 Notion 导入页面",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "添加到 Slack",
   "document published": "文档已发布",
   "document updated": "文档已更新",
